myOLEDrgb_SW/myOLEDrgb_SW.sdk/.metadata/.plugins/org.eclipse.cdt.ui/spi_test.build.log
02:03:52 **** Auto Build of configuration Debug for project spi_test ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/main.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../spi_test_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
../src/main.c: In function 'main':
../src/main.c:31:5: warning: implicit declaration of function 'SpiDebugClock' [-Wimplicit-function-declaration]
     SpiDebugClock();
     ^~~~~~~~~~~~~
../src/main.c:34:5: warning: implicit declaration of function 'SpiSetClock' [-Wimplicit-function-declaration]
     SpiSetClock(1000000); // Example: Set SPI clock to 1 MHz
     ^~~~~~~~~~~
../src/main.c:37:5: warning: implicit declaration of function 'SpiClockControl' [-Wimplicit-function-declaration]
     SpiClockControl(1);
     ^~~~~~~~~~~~~~~
../src/main.c: At top level:
../src/main.c:50:6: warning: conflicting types for 'SpiDebugClock'
 void SpiDebugClock() {
      ^~~~~~~~~~~~~
../src/main.c:31:5: note: previous implicit declaration of 'SpiDebugClock' was here
     SpiDebugClock();
     ^~~~~~~~~~~~~
../src/main.c: In function 'SpiDebugClock':
../src/main.c:54:27: error: 'SCK' undeclared (first use in this function)
     u32 sck_reg = ReadReg(SCK);
                           ^~~
../src/main.c:17:44: note: in definition of macro 'OLED_REG'
 #define OLED_REG(offset) (OLED_BASEADDR + (offset))
                                            ^~~~~~
../src/main.c:54:19: note: in expansion of macro 'ReadReg'
     u32 sck_reg = ReadReg(SCK);
                   ^~~~~~~
../src/main.c:54:27: note: each undeclared identifier is reported only once for each function it appears in
     u32 sck_reg = ReadReg(SCK);
                           ^~~
../src/main.c:17:44: note: in definition of macro 'OLED_REG'
 #define OLED_REG(offset) (OLED_BASEADDR + (offset))
                                            ^~~~~~
../src/main.c:54:19: note: in expansion of macro 'ReadReg'
     u32 sck_reg = ReadReg(SCK);
                   ^~~~~~~
../src/main.c:58:57: error: 'SPI_DONE' undeclared (first use in this function); did you mean 'SPI_DATA'?
     xil_printf("SPI_DONE Register: 0x%08X\r\n", ReadReg(SPI_DONE));
                                                         ^~~~~~~~
../src/main.c:17:44: note: in definition of macro 'OLED_REG'
 #define OLED_REG(offset) (OLED_BASEADDR + (offset))
                                            ^~~~~~
../src/main.c:58:49: note: in expansion of macro 'ReadReg'
     xil_printf("SPI_DONE Register: 0x%08X\r\n", ReadReg(SPI_DONE));
                                                 ^~~~~~~
../src/main.c:60:54: error: 'STATE' undeclared (first use in this function)
     xil_printf("STATE Register: 0x%08X\r\n", ReadReg(STATE));
                                                      ^~~~~
../src/main.c:17:44: note: in definition of macro 'OLED_REG'
 #define OLED_REG(offset) (OLED_BASEADDR + (offset))
                                            ^~~~~~
../src/main.c:60:46: note: in expansion of macro 'ReadReg'
     xil_printf("STATE Register: 0x%08X\r\n", ReadReg(STATE));
                                              ^~~~~~~
../src/main.c:61:56: error: 'BIT_CNT' undeclared (first use in this function)
     xil_printf("BIT_CNT Register: 0x%08X\r\n", ReadReg(BIT_CNT));
                                                        ^~~~~~~
../src/main.c:17:44: note: in definition of macro 'OLED_REG'
 #define OLED_REG(offset) (OLED_BASEADDR + (offset))
                                            ^~~~~~
../src/main.c:61:48: note: in expansion of macro 'ReadReg'
     xil_printf("BIT_CNT Register: 0x%08X\r\n", ReadReg(BIT_CNT));
                                                ^~~~~~~
make: *** [src/subdir.mk:23: src/main.o] Error 1

02:03:52 Build Finished (took 405ms)

